--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
--i https://pypi.org/simple
-click==7.0
-jinja2==2.10.3
-markupsafe==1.1.1
-pyyaml==5.1.2
+astroid==2.3.2
+Click==7.0
+isort==4.3.21
+Jinja2==2.10.3
+lazy-object-proxy==1.4.2
+MarkupSafe==1.1.1
+mccabe==0.6.1
+pylint==2.4.3
+PyYAML==5.1.2
+six==1.12.0
+typed-ast==1.4.0
+virtualenv==16.7.6
+wrapt==1.11.2
