--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -2,6 +2,5 @@ ginpar
 pallets_sphinx_themes
 pallets_sphinx_themes
 sphinx-prompt
-sphinx_click.ext
-sphinxcontrib.programoutput
-sphinx.ext.autosectionlabe
+sphinx_click
+sphinxcontrib
