--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,56 @@
+alabaster==0.7.12
+appdirs==1.4.3
+argh==0.26.2
 astroid==2.3.2
+attrs==19.3.0
+Babel==2.7.0
+black==19.3b0
+certifi==2019.9.11
+chardet==3.0.4
 Click==7.0
+doc8==0.8.0
+docutils==0.15.2
+idna==2.8
+imagesize==1.1.0
+importlib-metadata==0.23
 isort==4.3.21
 Jinja2==2.10.3
 lazy-object-proxy==1.4.2
+livereload==2.6.1
 MarkupSafe==1.1.1
 mccabe==0.6.1
+more-itertools==7.2.0
+packaging==19.2
+Pallets-Sphinx-Themes==1.2.2
+pathtools==0.1.2
+pbr==5.4.3
+port-for==0.3.1
+Pygments==2.4.2
 pylint==2.4.3
+pyparsing==2.4.2
+pytz==2019.3
 PyYAML==5.1.2
+requests==2.22.0
+restructuredtext-lint==1.3.0
 six==1.12.0
+snowballstemmer==2.0.0
+Sphinx==2.1.2
+sphinx-autobuild==0.7.1
+sphinx-click==2.3.0
+sphinx-prompt==1.1.0
+sphinxcontrib-applehelp==1.0.1
+sphinxcontrib-devhelp==1.0.1
+sphinxcontrib-htmlhelp==1.0.2
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-programoutput==0.15
+sphinxcontrib-qthelp==1.0.2
+sphinxcontrib-serializinghtml==1.1.3
+stevedore==1.31.0
+toml==0.10.0
+tornado==6.0.3
 typed-ast==1.4.0
+urllib3==1.25.6
 virtualenv==16.7.6
+watchdog==0.9.0
 wrapt==1.11.2
+zipp==0.6.0
