Update the templates for new sketches
Use today's date to specify the date of the sketch

--- a/ginpar/templates/sketch/data.yaml
+++ b/ginpar/templates/sketch/data.yaml
@@ -1,7 +1,9 @@
 ---
-- var: DIMENSIONS
-  attrs:
-    type: dimensions
-    value: 
-      - 2048
-      - 2048
+date: {{ today }}
+params:   
+  - DIMENSIONS:
+      attrs:
+        type: dimensions
+        value: 
+          - 2048
+          - 2560
