--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
     "python.pythonPath": "/home/d/dev/ginpar/venv/bin/python3.7",
-    "python.formatting.provider": "black"
+    "python.formatting.provider": "black",
+    "restructuredtext.preview.sphinx.disabled": true,
+    "restructuredtext.linter.disabled": true,
+    "restructuredtext.confPath": "${workspaceFolder}/docs/source"
 }   
